@@ -2,13 +2,6 @@ DONE:
 
 TODO:    
 
-    Extend synchronization on server to determine last acked input,
-    when calculating offset, do it relative to oldest input received
-    (eg. last recieved input + 1) rather than the input tick in the
-    packet.
-
-    To implement this server needs to track last tick received from client.
-
     -----------------------------------------
 
     Implement sliding window of inputs in client.
